...
    <string name="app_name">Читач књига</string>
    <string name="start_title">Српски текст у говор</string>
    <string name="nav_import">Увоз</string>
    <string name="nav_synthesize">Синтетизуј</string>
    <string name="nav_player">Плејер</string>
    <string name="nav_settings">Подешавања</string>
    <string name="import_book_title">Увези књигу</string>
    <string name="import_book_description">Изаберите датотеку са уређаја. Прво приказујемо садржај за преглед; ништа се не чува док не прихватите.</string>
    <string name="book_title">Књига</string>
    <string name="back">Назад</string>
    <string name="export_audio">Извези аудио</string>
    <string name="existing_export_title">Постојећи извоз</string>
    <string name="existing_export_message">Неколико назива већ постоји. Можете сачувати нове датотеке или заменити постојеће.</string>
...
    <string name="voice_row">Глас / ред</string>
    <string name="model">Модел</string>
    <string name="package_origin">Порекло пакета</string>
    <string name="runtime">Распоред</string>
    <string name="preprocessing">Претпроцесирање</string>
    <string name="engine">Енгин</string>
    <string name="engine_kokoro">Kokoro</string>
    <string name="engine_vits">VITS (Dragana)</string>
    <string name="engine_unavailable">VITS је доступан тек када су пакет и подршка за извршавање доступни.</string>
    <string name="ready_wav">Готов WAV</string>
    <string name="wav_format_samples">24 kHz, mono, PCM16, %1$d samples</string>
    <string name="distribution_format">Дистрибуција: %1$s</string>
    <string name="library">Библиотека</string>
...
    <string name="generation_resume">Настави</string>
    <string name="generation_cancel">Откажи генерисање</string>
    <string name="generation_retry">Понови генерисање</string>
    <string name="storage_failure">Нема довољно простора за звук. Ослободите простор и покушајте поново.</string>
    <string name="audio_failure">Проверени звук није исправан. Покушајте поново да генеришете овај део.</string>
    <string name="no_active_chapter">Нема активног поглавља</string>
    <string name="no_active_book">Није изабрана књига</string>
    <string name="player_retry">Покушај поново</string>
    <string name="previous_chapter">Претходно</string>
    <string name="play">Пусти</string>
    <string name="pause">Пауза</string>
    <string name="next_chapter">Следеће</string>
    <string name="seek_backward_description">Премотајте назад за %1$s</string>
...
    <string name="export_destination_unavailable">Одредиште извоза више није доступно. Изаберите другу фасциклу.</string>
    <string name="choose_other_destination">Изабери другу фасциклу</string>
    <string name="export_retry">Покушај поново</string>
    <string name="epub_duplicate">Овај EPUB је већ увезен.</string>
    <string name="epub_unavailable">Увоз EPUB-а није доступан. Изаберите датотеку поново.</string>
    <string name="open_diagnostics">Дијагностика</string>
    <string name="settings_speech_voice">Говор и глас</string>
    <string name="settings_default_engine">Подразумевани мотор</string>
    <string name="settings_engine_not_ready">Пакет или подршка нису доступни</string>
    <string name="settings_language">Језик</string>
    <string name="settings_serbian">Српски (sr)</string>
    <string name="settings_audio">Аудио</string>
    <string name="settings_sample_rate">Фреквенција узорковања</string>
...
    <string name="settings_storage_description">Заузеће и управљање пакетима модела доступни су у дијагностици.</string>
    <string name="settings_appearance">Изглед</string>
    <string name="settings_theme">Тема</string>
    <string name="settings_light_theme">Светла</string>
    <string name="settings_advanced">Напредно</string>
    <string name="settings_advanced_description">Проверите верзије, уређај, складиште и управљајте пакетима модела.</string>
    <string name="diagnostics_about_title">О апликацији и дијагностици</string>
    <string name="diagnostics_about_description">Безбедан преглед локалног модела, уређаја, верзија, лиценци, простора и доказа рада. Текст књига се овде не приказује.</string>
    <string name="diagnostics_loading">Провера локалних података…</string>
    <string name="diagnostics_model_section">Модел и провера</string>
    <string name="diagnostics_verification">Провера</string>
    <string name="diagnostics_package_id">Идентитет пакета</string>
    <string name="diagnostics_package_version">Верзија пакета</string>
...
